Update back to the astronaut

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     </style>
   </head>
   <body>
-    <model-viewer camera-controls touch-action="pan-y" skybox-image="../../shared-assets/environments/spruit_sunrise_1k_HDR.jpg" alt="A 3D model of metal spheres at varying degrees of roughness" src="../../shared-assets/models/glTF-Sample-Assets/Models/MetalRoughSpheresNoTextures/glTF/MetalRoughSpheresNoTextures.gltf"></model-viewer>
-
+   <model-viewer
+       src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+       alt="A 3D model of an astronaut"
+       auto-rotate
+       camera-controls
+       ar
+       ar-modes="webxr scene-viewer quick-look"
+     ></model-viewer>
   </body>
 </html>
