--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 
 <!--     Plant cell -->
 
-    <model-viewer
-  src="https://github.com/G0dS0n/VR-testing-CanvasLMS/blob/main/plant_cell__biology.glb"
+   <model-viewer
+  src="https://raw.githubusercontent.com/G0dS0n/VR-testing-CanvasLMS/main/plant_cell__biology.glb"
   alt="3D model of a Plant Cell"
   auto-rotate
   camera-controls
   ar
   style="width: 100%; height: 500px; background: #f0f0f0; border: 1px solid #ccc; border-radius: 8px;">
 </model-viewer>
+
   </body>
 </html>
