--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
     </style>
   </head>
   <body>
-   <model-viewer
+  <model-viewer
        src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
        alt="A 3D model of an astronaut"
        auto-rotate
        camera-controls
        ar
        ar-modes="webxr scene-viewer quick-look"
-     ></model-viewer>
-
-
+     >
+  </model-viewer>
 <!--     Plant cell -->
-
-   <model-viewer
+<model-viewer
   src="https://raw.githubusercontent.com/G0dS0n/VR-testing-CanvasLMS/main/plant_cell__biology.glb"
   alt="3D model of a Plant Cell"
   auto-rotate
@@ -44,6 +42,17 @@
   ar
   style="width: 100%; height: 500px; background: #f0f0f0; border: 1px solid #ccc; border-radius: 8px;">
 </model-viewer>
-
+<!--  -->
+    
+<!-- Chemistry -->
+<model-viewer
+  src="https://raw.githubusercontent.com/G0dS0n/VR-testing-CanvasLMS/main/24261-bas-color-print_NIH3D.glb"
+  alt="3D model of a Plant Cell"
+  auto-rotate
+  camera-controls
+  ar
+  style="width: 100%; height: 500px; background: #f0f0f0; border: 1px solid #ccc; border-radius: 8px;">
+</model-viewer>
+<!--      -->
   </body>
 </html>
